k8s-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: flask-consul
  labels:
    app: flask-consul
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-consul
  template:
    metadata:
      labels:
        app: flask-consul
    spec:
      containers:
        - name: flask-consul
          image: 'gxjluck/flask-consul:v0.13.0'
          ports:
            - name: http-2026
              containerPort: 2026
              protocol: TCP
          imagePullPolicy: Always
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: flask-consul
  labels:
    app: flask-consul
spec:
  ports:
    - name: http-2026
      protocol: TCP
      port: 2026
      targetPort: 2026
  selector:
    app: flask-consul
  type: ClusterIP
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-consul
  labels:
    app: nginx-consul
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-consul
  template:
    metadata:
      labels:
        app: nginx-consul
    spec:
      containers:
        - name: nginx-consul
          image: 'gxjluck/nginx-consul:v0.13.0'
          ports:
            - name: http-1026
              containerPort: 1026
              protocol: TCP
          imagePullPolicy: Always
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: consulmanager
  labels:
    service: consulmanager
spec:
  ports:
    - name: nginx-consul
      protocol: TCP
      port: 1026
      targetPort: 1026
  selector:
    app: nginx-consul
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul
spec:
  ingressClassName: nginx
  rules:
  - host: consul-manager.devops.aldicn.local
    http:
      paths:
      - backend:
          service:
            name: consulmanager
            port:
              number: 1026
        path: /
        pathType: Prefix
